-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.0.0 RC
-
None
-
92f9a3142c0b24db39e6d04f707cad65205bd374 (qt/qtwayland/dev)
src/client/CMakeFiles/WaylandClient.dir/qwaylandwindow.cpp.o.d -o src/client/CMakeFiles/WaylandClient.dir/qwaylandwindow.cpp.o -c src/client/qwaylandwindow.cpp agent:2020/11/17 04:25:52 build.go:379: src/client/qwaylandwindow.cpp: In member function ‘void QtWaylandClient::QWaylandWindow::initWindow()’: agent:2020/11/17 04:25:52 build.go:379: src/client/qwaylandwindow.cpp:165:81: error: conversion from ‘QString’ to non-scalar type ‘QFileInfo’ requested agent:2020/11/17 04:25:52 build.go:379: 165 | QFileInfo fi = QCoreApplication::instance()->applicationFilePath(); agent:2020/11/17 04:25:52 build.go:379: | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
Details: https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1605587080
Tested changes (refs/builds/qtci/dev/1605587014):
https://codereview.qt-project.org/c/qt/qtwayland/+/321903/4 Update dependencies on 'dev' in qt/qtwayland