Fix compilation after QFileInfo changes

The QFileInfo constructors were made explicit in
784a290c4b08e84d895a62dada5420a3b47dde48, breaking compilation
where the implicit construction was used.

Fixes: QTBUG-88565
Change-Id: Icc4c335ea5cbbd21f8a9027beb57823e233b253d
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>